//
// Copyright (C) 2024 EA group inc.
// Author: Jeff.li lijippy@163.com
// All rights reserved.
// This program is free software: you can redistribute it and/or modify
// it under the terms of the GNU Affero General Public License as published
// by the Free Software Foundation, either version 3 of the License, or
// (at your option) any later version.
//
// This program is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
// GNU Affero General Public License for more details.
//
// You should have received a copy of the GNU Affero General Public License
// along with this program.  If not, see <https://www.gnu.org/licenses/>.
//

syntax="proto2";
package sirius.proto;
option cc_generic_services = true;

enum ConfigType {
  CF_JSON = 0;
  CF_GFLAGS = 1;
  CF_TEXT = 3;
  CF_TOML = 4;
  CF_XML = 5;
  CF_YAML = 6;
  CF_INI = 7;
};

message Version {
  required int32 major = 1;
  required int32 minor = 2;
  required int32 patch = 3;
};

message ConfigInfo {
  required string name = 1;
  optional Version version = 2;
  optional string content = 3;
  optional ConfigType type = 4 [default = CF_JSON];
  optional uint32 time = 5;
  optional int64 id = 6;
}
